DrilldownGraph/objects/Sales_products__c/Sales_products__c.object-meta.xml
<CustomObject>
    <label>Sales products</label>
    <nameField>
        <label>Sales products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>