DrilldownGraph/objects/Sales_products__c/fields/Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity__c</fullName>
    <label>Product Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>