DrilldownGraph/objects/Sales_products__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>Pants</fullName>
            </value>
            <value>
                <fullName>Smartphones</fullName>
            </value>
            <value>
                <fullName>Tabs</fullName>
            </value>
            <value>
                <fullName>T-shirts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>