DrilldownGraph/objects/Sales_products__c/fields/Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_Date__c</fullName>
    <label>Sold Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>