DrilldownGraph/objects/Sales_products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Price__c</columns>
    <columns>Product_Quantity__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Sold_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>